Clearing Recent is notified as Deleting
it is not a new issue, but first time i did it, for a second i thought it actually removed the files ..specially because it took a long time!
Reproduce:
- Open Files
- Go To Recent
- Ctrl+a to select all
- Right Click -> Remove from Recent
just to make it clear, the issue here is the message in notification. it should be something like "955 files were removed from your recent" etc
Edited by António Fernandes