file-operations: Use "Clear" for removing files from recent

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/871